force-app/main/default/objects/Salary_Detail__c/Salary_Detail__c.object-meta.xml
<CustomObject>
    <label>Salary Detail</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Salary Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salary Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>