force-app/main/default/objects/Salary_Detail__c/fields/Compensation__c.field-meta.xml
<CustomField>
    <fullName>Compensation__c</fullName>
    <label>Compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>