force-app/main/default/objects/Salary_Detail__c/fields/External_User__c.field-meta.xml
<CustomField>
    <fullName>External_User__c</fullName>
    <label>External User</label>
    <referenceTo>External_User__c</referenceTo>
    <relationshipLabel>Salary Details</relationshipLabel>
    <relationshipName>Salary_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>