force-app/main/default/objects/Salary_Detail__c/fields/Final__c.field-meta.xml
<CustomField>
    <fullName>Final__c</fullName>
    <formula>Amount__c  +  Compensation__c  -  Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>